--- a/ui/route-map/index.html
+++ b/ui/route-map/index.html
@@ -9,7 +9,7 @@
             max-width:1200px;
         }
         #mapid {
-            height: 600px;
+            height: 800px;
             border: 1px solid white;
         }
         #mapid a {
@@ -28,6 +28,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://d3js.org/d3.v2.js" charset="utf-8"></script>
     <script src="app.js"></script>
 </body>
 </html>
