Animated the live route thing. Looks awesome!

--- a/ui/route-map/index.html
+++ b/ui/route-map/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Route Map</title>
     <link href="https://bootswatch.com/cyborg/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.css" />
     <style>
         .container-fluid {
             max-width:1200px;
@@ -23,7 +23,8 @@
 
     <br/><br/><br/><br/><br/>
 
-    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet-src.js"></script>
+    <script src="snake.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
