Tweaked the fonts to work in IE

--- a/ui/departure-board/index.html
+++ b/ui/departure-board/index.html
@@ -6,7 +6,10 @@
     <style>
         @font-face {
             font-family: led;
-            src: url(SIGNUS_LED-S.ttf);
+			src: url('signus_led-s-webfont.woff2') format('woff2'),
+				 url('signus_led-s-webfont.woff') format('woff');
+			font-weight: normal;
+			font-style: normal;
         }
 
         .container-fluid {
