Tweaked broken stylesheet link

--- a/ui/departure-board/index.html
+++ b/ui/departure-board/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="departuresApp">
 <head>
     <title>Departures</title>
-    <link href="https://bootswatch.com/cyborg/bootstrap.min.css" rel="stylesheet">
+    <link href="https://bootswatch.com/4/cyborg/bootstrap.min.css" rel="stylesheet">
     <style>
         @font-face {
             font-family: led;
